passport auth complete

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,6 +1,6 @@
 <div class='welcome'>
   <h1>Celebrity Wiki</h1>
-  <p>Welcome! Let's learn some celeb stuff</p>
+  <p>You talking to me?</p>
 </div>
 
 
@@ -8,13 +8,14 @@
   <h2>Login</h2>
 
   <label for="username">Username</label>
-  <input type="text" name="theUsername">
+  <input type="text" name="username">
 
   <label for="password">Password</label>
-  <input type="password" name="thePassword">
+  <input type="password" name="password">
 
-  {{!-- {{#if errorMessage }}
-    <div class="error-message">{{ errorMessage }}</div>
+
+  {{!-- {{#if message}}
+  <div class="error-message">{{ message }}</div>
   {{/if}} --}}
 
   <button type='submit'>Login</button>
