--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,6 +1,6 @@
 <div class='welcome'>
   <h1>Celebrity Wiki</h1>
-  <p>Welcome! Let's learn some celeb stuff</p>
+  <p>McLovin!? What kind of a stupid name is that...</p>
 </div>
 
 <form action="/user/login" method="POST" id="signup-form">
