--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,8 @@
 <div class='welcome'>
   <h1>Celebrity Wiki</h1>
-  <p>Welcome! Let's learn some celeb stuff</p>
-  {{!-- <a href="/celebrity">View Celebrities</a> --}}
-  {{!-- <div>
+  <p>I have to return some videotapes.</p>
+  <div>
     <a class='signup-home' href="/user/signup">Sign up</a>
     <a class='home-login' href="/user/login">Login</a>
-  </div> --}}
+  </div>
 </div>
