--- a/views/celebrities/index.hbs
+++ b/views/celebrities/index.hbs
@@ -4,7 +4,7 @@
     {{#each celebrities}}
     <div class='celeb-options'>
         <div class='celeb-image'>
-            <img src="{{this.url}}" alt="celebrity image">
+            <img src="{{this.image}}" alt="celebrity image">
         </div>
         
         <div class='celeb-name'>
