--- a/views/movies/edit.hbs
+++ b/views/movies/edit.hbs
@@ -11,6 +11,9 @@
         <p>Edit Plot:</p>
         <input type="text" name='thePlot' value='{{movie.catchPhrase}}'>
 
+        <p>Edit Image:</p>
+        <input type="text" name='theImage' value='{{movie.image}}'>
+
     </div>
 
     <button type='submit'> Save </button>
