--- a/views/movies/new.hbs
+++ b/views/movies/new.hbs
@@ -11,6 +11,9 @@
 <p>Plot</p>
 <input type="text" name='thePlot'>
 
+<p>Image</p>
+<input type="text" name='theImage'>
+
 <button type="submit">SAVE</button>
 
 </form>
