--- a/views/movies/show.hbs
+++ b/views/movies/show.hbs
@@ -3,3 +3,4 @@
 <p>Title: {{movie.title}}</p>
 <p>Genre: {{movie.genre}}</p>
 <p>Plot: {{movie.plot}}</p>
+<img src="{{movie.image}}" alt="movie image">
