--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+  padding: 30px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: rgba(92, 91, 91, 0.1); }
 
@@ -130,12 +131,15 @@ nav > a {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  width: 30vw;
-  height: 40vh;
+  width: 270px;
+  height: 50vh;
   padding: 2rem;
   margin: 1rem;
-  background-color: rgba(0, 255, 251, 0.6);
+  background-color: rgba(92, 91, 91, 0.6);
   border-radius: 5px; }
+
+.celeb-options img {
+  width: 270px; }
 
 .celeb-actions {
   display: flex;
