add google social login. debug routes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 30px;
+  padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: rgba(92, 91, 91, 0.1); }
 
@@ -192,11 +192,21 @@ nav > a {
   margin: 1.5rem; }
 
 .error-message {
+  text-align: center;
   background: #F02B63;
   box-sizing: border-box;
   color: #fff;
   margin: 20px auto;
   padding: 20px;
-  width: 100%; }
+  width: 25%; }
+
+.success-message {
+  text-align: center;
+  background: #00f095;
+  box-sizing: border-box;
+  color: #fff;
+  margin: 20px auto;
+  padding: 20px;
+  width: 25%; }
 
 /*# sourceMappingURL=style.css.map */
