--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,14 +40,16 @@
 
   {{{body}}}
 
-
-  {{!-- {{#if errorMessage}}
-  <div>{{errorMessage}}</div>
+<div>
+  {{#if errorMessage}}
+  <div class='error-message'>{{errorMessage}}</div>
   {{/if}}
 
   {{#if SuccessMessage}}
-  <div>{{SuccessMessage}}</div>
-  {{/if}} --}}
+  <div class='success-message'>{{SuccessMessage}}</div>
+  {{/if}}
+</div>
+
 
   <script src="/javascripts/script.js"></script>
 </body>
