--- a/views/user/new-account.hbs
+++ b/views/user/new-account.hbs
@@ -2,7 +2,7 @@
 
 <h2>Create New Accounts</h2>
 
-<form action="/signup" method="POST">
+<form action="/user/signup" method="POST">
 
 <div>
     <label for="username"> Username </label>
