--- a/views/movies/new.hbs
+++ b/views/movies/new.hbs
@@ -1,19 +1,21 @@
-<h2> Add new movie </h2>
+<div class='add-new'>
+    <h2> Add new movie </h2>
 
-<form action="/movies" method="POST">
+    <form action="/movies" method="POST">
 
-<p>Title</p>
-<input type="text" name='theTitle'>
+        <p>Title</p>
+        <input type="text" name='theTitle'>
 
-<p>Genre</p>
-<input type="text" name='theGenre'>
+        <p>Genre</p>
+        <input type="text" name='theGenre'>
 
-<p>Plot</p>
-<input type="text" name='thePlot'>
+        <p>Plot</p>
+        <input type="text" name='thePlot'>
 
-<p>Image</p>
-<input type="text" name='theImage'>
+        <p>Image</p>
+        <input type="text" name='theImage'>
 
-<button type="submit">SAVE</button>
+        <button type="submit">SAVE</button>
 
-</form>
+    </form>
+</div>
