push. responsive menu wish list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -227,4 +227,8 @@ nav > a {
   margin: 20vh auto;
   width: 380px; }
 
+.details {
+  margin: 10px auto;
+  width: 380px; }
+
 /*# sourceMappingURL=style.css.map */
