--- a/views/movies/show.hbs
+++ b/views/movies/show.hbs
@@ -1,6 +1,9 @@
-<h2> {{movie.title}} Details!!!</h2>
+<div class='details'>
+    <h2> {{movie.title}} Details!!!</h2>
+    <img src="{{movie.image}}" alt="movie image">
 
-<p>Title: {{movie.title}}</p>
-<p>Genre: {{movie.genre}}</p>
-<p>Plot: {{movie.plot}}</p>
-<img src="{{movie.image}}" alt="movie image">
+    <p>Title: {{movie.title}}</p>
+    <p>Genre: {{movie.genre}}</p>
+    <p>Plot: {{movie.plot}}</p>
+
+</div>
