--- a/views/celebrities/show.hbs
+++ b/views/celebrities/show.hbs
@@ -1,8 +1,10 @@
-<h2>Welcome to {{celeb.name}}'s info page!!!</h2>
+<div class='details'>
+    <h2>Welcome to {{celeb.name}}'s info page!!!</h2>
 
-<img src="{{celeb.image}}" alt="celeb image">
+    <img src="{{celeb.image}}" alt="celeb image">
 
-<p>Name: {{celeb.name}}</p>
-<p>Occupation: {{celeb.occupation}}</p>
-<p>Catch Phrase: '{{celeb.catchPhrase}}'</p>
-<p>Movie: {{celeb.movie.title}}</p>
+    <p>Name: {{celeb.name}}</p>
+    <p>Occupation: {{celeb.occupation}}</p>
+    <p>Catch Phrase: '{{celeb.catchPhrase}}'</p>
+    <p>Movie: {{celeb.movie.title}}</p>
+</div>
